--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "shared_demo_git",
+  "name": "node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shiv-node-dns138/node.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/shiv-node-dns138/node/issues"
+  },
+  "homepage": "https://github.com/shiv-node-dns138/node#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "winston": "^3.3.3"
   }
 }
